Guy Fieri is tired of cooking

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ FLASK_APP=car_inventory
 FLASK_ENV=development
 SECRET_KEY='Diners, Drive-Ins and Dives, Baby!'
 DATABASE_URL=postgresql://mrrhxrot:MFWL20MqzIrZG90fwFRotOHKSV3kVWIX@berry.db.elephantsql.com/mrrhxrot
+JWT_SECRET_KEY = 'Does Guy Fieri actually make food?'
