--- a/requirements.txt
+++ b/requirements.txt
@@ -1,162 +1,42 @@
-absl-py==1.4.0
 alembic==1.12.0
-anyio==3.7.1
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-astunparse==1.6.3
-async-lru==2.0.4
 attrs==23.1.0
-Babel==2.12.1
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
 blinker==1.6.2
-cachetools==5.3.1
+cattrs==23.1.2
 certifi==2023.7.22
-cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
-comm==0.1.4
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
 dnspython==2.4.2
 email-validator==2.0.0.post2
-exceptiongroup==1.1.2
-executing==1.2.0
-fastjsonschema==2.18.0
-ffmpeg-python==0.2.0
+exceptiongroup==1.1.3
 Flask==2.3.3
+Flask-Cors==4.0.0
+Flask-JWT-Extended==4.5.2
 Flask-Login==0.6.2
+flask-marshmallow==0.15.0
 Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
-flatbuffers==1.12
-fqdn==1.5.1
-future==0.18.3
-gast==0.4.0
-google-auth==2.22.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
 greenlet==2.0.2
-grpcio==1.56.2
-h11==0.12.0
-h2==4.1.0
-h5py==3.9.0
-hpack==4.0.0
-httpcore==0.13.7
-httpx==0.19.0
-hyperframe==6.0.1
+gunicorn==21.2.0
 idna==3.4
-ipykernel==6.25.1
-ipython==8.14.0
-isoduration==20.11.0
 itsdangerous==2.1.2
-jedi==0.19.0
 Jinja2==3.1.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.19.0
-jsonschema-specifications==2023.7.1
-jupyter-events==0.7.0
-jupyter-lsp==2.2.0
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-jupyter_server==2.7.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.4
-jupyterlab-pygments==0.2.2
-jupyterlab_server==2.24.0
-keras==2.9.0
-Keras-Preprocessing==1.1.2
-libclang==16.0.6
 Mako==1.2.4
-Markdown==3.4.4
 MarkupSafe==2.1.3
-matplotlib-inline==0.1.6
-mistune==3.0.1
-nbclient==0.8.0
-nbconvert==7.7.3
-nbformat==5.9.2
-nest-asyncio==1.5.7
-norbert==0.2.1
-notebook==7.0.2
-notebook_shim==0.2.3
-numpy==1.25.2
-oauthlib==3.2.2
-opt-einsum==3.3.0
-overrides==7.4.0
+marshmallow==3.20.1
+marshmallow-sqlalchemy==0.29.0
 packaging==23.1
-pandas==1.5.3
-pandocfilters==1.5.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==10.0.0
 platformdirs==3.10.0
-playsound==1.3.0
-prometheus-client==0.17.1
-prompt-toolkit==3.0.39
-protobuf==3.19.6
-psutil==5.9.5
 psycopg2==2.9.7
-pure-eval==0.2.2
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycparser==2.21
-pydub==0.25.1
-pygame==2.5.0
-Pygments==2.16.1
-python-dateutil==2.8.2
+PyJWT==2.8.0
 python-dotenv==1.0.0
-python-json-logger==2.0.7
-python-vlc==3.0.18122
-pytz==2023.3
-pywin32==306
-pywinpty==2.0.11
-PyYAML==6.0.1
-pyzmq==25.1.0
-referencing==0.30.2
 requests==2.31.0
-requests-oauthlib==1.3.1
-rfc3339-validator==0.1.4
-rfc3986==1.5.0
-rfc3986-validator==0.1.1
-rpds-py==0.9.2
-rsa==4.9
-scipy==1.11.1
-Send2Trash==1.8.2
+requests-cache==1.1.0
 six==1.16.0
-sniffio==1.3.0
-sounddevice==0.4.6
-soundfile==0.12.1
-soupsieve==2.4.1
-spleeter==2.4.0
 SQLAlchemy==2.0.20
-stack-data==0.6.2
-tensorboard==2.9.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.9.3
-tensorflow-estimator==2.9.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.3.0
-terminado==0.17.1
-tinycss2==1.2.1
-tk==0.1.0
-tomli==2.0.1
-tornado==6.3.2
-traitlets==5.9.0
-typer==0.3.2
 typing_extensions==4.7.1
-uri-template==1.3.0
-urllib3==1.26.16
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.1
+url-normalize==1.4.3
+urllib3==2.0.4
 Werkzeug==2.3.7
-wrapt==1.15.0
 WTForms==3.0.1
